--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   logger:
     hostname: logger
     container_name: logger
-    image: logger-debug
+    image: zachhamilton/rt-log-aggregation-logger
     depends_on:
       - fluentbit
     logging:
